# suntheme

./: Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
docs/: index.html  script.js  styles.css
npm/: README.md  install.js  package.json
src/: banner.rs  config.rs  main.rs  sun_times.rs  telemetry.rs  theme_switcher.rs  themes.rs
src/commands/: daemon.rs  init.rs  mod.rs  sun.rs  theme.rs
tests/: integration_tests.rs
